--- a/Pandas/Untitled.ipynb
+++ b/Pandas/Untitled.ipynb
@@ -202,9 +202,97 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b1ebc010-601d-4dcf-9e27-cc068e804dbc",
+   "metadata": {},
+   "source": [
+    "In Pandas, the Series and DataFrame are mutable objects, which means that you can modify their contents after they have been created. On the other hand, Panel is a deprecated class in Pandas and is no longer recommended to be used, but when it was being used, it was also a mutable object.\n",
+    "\n",
+    "So, in summary, both Series and DataFrame are mutable, while Panel is a deprecated class in Pandas that was also mutable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ff991fe-61d5-4c89-a8ad-95c4f5b859f7",
+   "metadata": {},
+   "source": [
+    "## Q7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b1bb3399-5070-45b8-a5a3-418763b2de3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Car make</th>\n",
+       "      <th>Colour</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>BMW</td>\n",
+       "      <td>Red</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>Blue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Honda</td>\n",
+       "      <td>Green</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Car make Colour\n",
+       "0      BMW    Red\n",
+       "1   Toyota   Blue\n",
+       "2    Honda  Green"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "colours=pd.Series([\"Red\",\"Blue\",\"Green\"])\n",
+    "series=pd.Series([\"BMW\",\"Toyota\",\"Honda\"])\n",
+    "car_data=pd.DataFrame({\"Car make\":series,\"Colour\":colours})\n",
+    "car_data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32755b1a-3607-44d7-95ef-b274977c1ec0",
+   "id": "db6253a7-66a7-42d1-9097-8dacb6e1f353",
    "metadata": {},
    "outputs": [],
    "source": []
